# genart_old

./: .gitignore  Cargo.toml  default.env
configs/spinners/: default.toml  experimental.toml  frame.toml  frame_neon.toml  frame_phone.toml  single.toml
display/: Cargo.toml
display/src/: lib.rs
signature/: Cargo.toml
signature/src/: lib.rs
spinners/: Cargo.toml
spinners/src/: cli.rs  config.rs  main.rs  model.rs  polar.rs  settings.rs  spinner.rs
spinners/src/cli/: config.rs  constants.rs  mod.rs  params.rs
spinners/src/spinner/: config.rs  mod.rs
texture/: Cargo.toml
texture/src/: lib.rs  saver.rs
travelers/: Cargo.toml
travelers/src/: main.rs  model.rs  strategy.rs  traveler.rs
