[package]
  authors = ["Donatien Criaud <donatien.criaud@gmail.com>"]
  edition = "2021"
  name = "spinners"
  version = "0.1.0"

[dependencies]
  clap = { version = "3.1", features = ["derive"] }
  config = { version = "0.12", features = ['toml'] }
  lazy_static = "1.4"
  nannou = "0.18"
  rand = "0.8"
  serde = { version = "1.0", features = ["derive"] }
  splines = { version = "4.0", features = ["std", "glam"] }
  texture = { path = "../texture" }
