[package]
  authors = ["Donatien Criaud <donatien.criaud@gmail.com>"]
  edition = "2021"
  name = "spinners"
  version = "0.1.0"

[dependencies]
  clap = { version = "3.1.8", features = ["derive"] }
  config = { version = "0.13.0", features = ['toml'] }
  display = { path = "../display" }
  lazy_static = "1.4.0"
  nannou = "0.18.1"
  rand = "0.8.5"
  serde = { version = "1.0.136", features = ["derive"] }
  signature = { path = "../signature" }
  splines = { version = "=4.0.3", features = [
    "std",
    "glam",
  ] } # 4.1.0 is not compatible
